fixed grid container spacing to eliminate horizontal scroll bar

--- a/client/src/pages/Factbook.css
+++ b/client/src/pages/Factbook.css
@@ -1,5 +1,6 @@
 body {
     background-color: black;
+    justify-content: center;
 }
 #text {
     text-align: center;
